# ARCtrl.Querymodel

./: .gitignore  .zenodo.json  ARCtrl.Querymodel.sln  Directory.Packages.props  README.md  RELEASE_NOTES.md  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.mts
.github/workflows/: build-test.yml
src/: Package.Metadata.props
src/ARCtrl.Fragcess/: ARCtrl.Fragcess.fsproj  CSV.fs  DataContext.fs  FragmentSelector.fs
src/ARCtrl.QueryModel/: ARCtrl.QueryModel.Common.props  ARCtrl.QueryModel.Javascript.fsproj  ARCtrl.QueryModel.Python.fsproj  ARCtrl.QueryModel.fsproj  ArcTable.fs  ArcTables.fs  Assay.fs  Category.fs  Comment.fs  DataContext.fs  FragmentSelector.fs  Investigation.fs  OntologyAnnotation.fs  ResizeArray.fs  Study.fs  Value.fs  ValueCollection.fs  __init__.py  index.ts
src/ARCtrl.QueryModel/Linq/: QueryBuilder.fs
src/ARCtrl.QueryModel/ProcessCore/: IONode.fs  KnowledgeGraph.fs  LabProcess.fs  ProcessCollection.fs  PropertyValue.fs  QLabProtocol.fs  ValueCollection.fs
tests/ARCtrl.Querymodel.Tests/: ARCtrl.Querymodel.Tests.fsproj  FragmentSelector.fs  Main.fs  ProcessCore.fs  TestARC.fs
