[project]
name = "arcquerymodel"
version = "3.0.0a1"
description = "Library for graph-based querying of Annotated Research Contexts (ARCs)."
authors = [
    { name = "Heinrich Lukas Weil", email = "weil@rptu.de" },
]
requires-python = ">=3.11"
readme = "README.md"
maintainers = [{ name = "Florian Wetzels" }]
keywords = [
    "arc",
    "query",
    "annotated research context",
    "isa",
    "research data",
    "multi platform",
]
dependencies = [
    "arctrl>= 3.0.0b15, <4.0.0"
]

[project.urls]
Repository = "https://github.com/nfdi4plants/ARCtrl.Querymodel"

[dependency-groups]
dev = [
    "pytest>=8.1.1,<9",
    "twine>=4.0.2"
]

[tool.poetry]
include = [
    "src/ARCtrl.Querymodel/py/**/*.py"
]
packages = [
    { include = "**/*.py", from = "src/ARCtrl.Querymodel/", to = "arcquerymodel" }
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
